// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip (unit tests) when has a position should match the snapshot 1`] = `
<kv-tooltip position="left" text="Tooltip">
  <mock:shadow-root>
    <div aria-describedby="tooltip" class="tooltip-content" id="content" part="content">
      <slot></slot>
    </div>
    <div class="tooltip-container" id="tooltip" part="container" role="tooltip">
      Tooltip
    </div>
  </mock:shadow-root>
</kv-tooltip>
`;

exports[`Tooltip (unit tests) when uses default props should match the snapshot 1`] = `
<kv-tooltip text="Tooltip">
  <mock:shadow-root>
    <div aria-describedby="tooltip" class="tooltip-content" id="content" part="content">
      <slot></slot>
    </div>
    <div class="tooltip-container" id="tooltip" part="container" role="tooltip">
      Tooltip
    </div>
  </mock:shadow-root>
</kv-tooltip>
`;
